# plover_python_dictionary

./: .gitignore  MANIFEST.in  README.md  README.rst  plover_python_dictionary.py  pyproject.toml  setup.cfg  setup.py  tox.ini
test/: dict_callable_checks.py  dict_reverse_lookup.py  dict_utf8.py  show_stroke.py  test_blackbox.py  test_python_dict.py
