[metadata]
name = plover_python_dictionary
version = 0.5.10
description = Python dictionaries support for Plover
long_description = file: README.rst
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_python_dictionary
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev5
setup_requires =
	pytest-runner>=4.0
test_requires =
	pytest>=3.0.1
py_modules =
	plover_python_dictionary

[options.entry_points]
plover.dictionary =
	py = plover_python_dictionary:PythonDictionary

[aliases]
test = pytest

[tool:pytest]
addopts = -ra

# vim: commentstring=#\ %s list
