[metadata]
name = plover_python_dictionary
version = 0.5.10
description = Python dictionaries support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_python_dictionary
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin
python_requires = >=3.6

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev5
py_modules =
	plover_python_dictionary

[options.extras_require]
test =
	plover>=4.0.0.dev6
	pytest>=3.0.1

[options.entry_points]
plover.dictionary =
	py = plover_python_dictionary:PythonDictionary

[tool:pytest]
addopts = -ra

# vim: commentstring=#\ %s list
